--- a/services/videomicro/Dockerfile
+++ b/services/videomicro/Dockerfile
@@ -1,9 +1,11 @@
-FROM ubuntu:20.04
-RUN sed -i s@/archive.ubuntu.com/@/mirrors.163.com/@g /etc/apt/sources.list
-RUN sed -i s@/security.ubuntu.com/@/mirrors.163.com/@g /etc/apt/sources.list
-RUN apt-get clean
-RUN apt-get -y update
+FROM golang:1.19.6 AS builder
+WORKDIR $GOPATH/src/videomicro
+Add . $GOPATH/src/videomicro
+RUN go build .
 
-WORKDIR ~/
-Add ./output .
-ENTRYPOINT ["./bootstrap.sh"]
+FROM ubuntu:latest
+WORKDIR videomicro
+COPY --from=builder /go/src/videomicro/videomicro .
+EXPOSE 10001
+CMD ["./videomicro"]
+#ENTRYPOINT ["./bootstrap.sh"]
